--- a/app/src/main/res/layout/activity_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_chi_tiet.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/txttensp"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:gravity="center"
+                android:layout_marginLeft="10dp"
                 android:text="Tên sản phẩm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -51,17 +51,19 @@
 
             <Spinner
                 android:id="@+id/spinner"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/spinner"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="10dp"
                 android:minHeight="48dp" />
             <Button
                 android:id="@+id/btnthemvaogio"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginTop="5dp"
+                android:backgroundTint="#ff66"
                 android:text="THÊM VÀO GIỎ HÀNG"
                 android:textColor="@android:color/white"
                 android:layout_width="match_parent"
