--- a/app/src/main/res/layout/item_giohang.xml
+++ b/app/src/main/res/layout/item_giohang.xml
@@ -30,8 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <LinearLayout
-                android:orientation="horizontal"
-                android:weightSum="18"
+                android:orientation="vertical"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_width="match_parent"
@@ -39,46 +38,55 @@
                 <TextView
                     android:id="@+id/item_giohang_gia"
                     android:text="15000"
-                    android:textSize="15sp"
-                    android:layout_weight="5"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="16sp"
                     android:textColor="@android:color/holo_red_light"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-                <ImageView
-                    android:id="@+id/item_giohang_tru"
-                    android:src="@drawable/ic_remove"
-                    android:layout_weight="2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/item_giohang_soluong"
-                    android:text="1"
-                    android:textSize="15sp"
-                    android:gravity="center"
-                    android:layout_weight="2"
-                    android:textStyle="bold"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
-                <ImageView
-                    android:id="@+id/item_giohang_cong"
-                    android:src="@drawable/ic_add"
-                    android:layout_weight="2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
-                <ImageView
-                    android:layout_weight="2"
-                    android:src="@drawable/ic_drag_handle"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/item_giohang_giasp2"
-                    android:text="25000"
-                    android:textSize="15sp"
-                    android:gravity="center|center_vertical"
-                    android:layout_weight="5"
-                    android:textColor="@android:color/holo_red_light"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:id="@+id/item_giohang_tru"
+                        android:src="@drawable/ic_remove"
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/item_giohang_soluong"
+                        android:text="1"
+                        android:textSize="16sp"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+                    <ImageView
+                        android:id="@+id/item_giohang_cong"
+                        android:src="@drawable/ic_add"
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_drag_handle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/item_giohang_giasp2"
+                        android:text="25000"
+                        android:gravity="center|center_vertical"
+                        android:textSize="18sp"
+                        android:textColor="@android:color/holo_red_light"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
