--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.DangKyActivity">
     <TextView
-        android:id="@+id/txtdangnhap"
+        android:id="@+id/textdangky"
         app:layout_constraintTop_toTopOf="parent"
         android:text="Đăng ký"
         android:textSize="25sp"
@@ -18,13 +18,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <com.google.android.material.textfield.TextInputLayout
-        app:layout_constraintTop_toBottomOf="@+id/txtdangnhap"
+        app:layout_constraintTop_toBottomOf="@+id/textdangky"
+        android:layout_marginTop="5dp"
+        android:id="@+id/line0"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/username"
+            android:hint="Họ tên:"
+            android:drawableLeft="@drawable/ic_person"
+            android:inputType="textEmailAddress"
+            android:drawablePadding="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        app:layout_constraintTop_toBottomOf="@+id/line0"
         android:layout_marginTop="5dp"
         android:id="@+id/line1"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email"
             android:hint="Email:"
             android:drawableLeft="@drawable/ic_email"
             android:inputType="textEmailAddress"
@@ -42,6 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/pass"
             android:hint="Password:"
             android:drawableLeft="@drawable/ic_key"
             android:inputType="textPassword"
@@ -59,6 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/repass"
             android:hint="Confirm password:"
             android:drawableLeft="@drawable/ic_key"
             android:inputType="textPassword"
@@ -68,10 +89,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        app:layout_constraintTop_toBottomOf="@+id/line3"
+        android:layout_marginTop="5dp"
+        android:id="@+id/line4"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/mobile"
+            android:hint="Số điện thoại:"
+            android:drawableLeft="@drawable/ic_phone"
+            android:drawablePadding="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btndangky"
-        android:background="@color/colorbutton"
-        app:layout_constraintTop_toBottomOf="@id/line3"
+        android:background="@drawable/background_button"
+        app:layout_constraintTop_toBottomOf="@id/line4"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
