--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.DangNhapActivity">
     <TextView
-        android:id="@+id/txtdangnhap"
+        android:id="@+id/textdangnhap"
         app:layout_constraintTop_toTopOf="parent"
         android:text="Đăng nhập"
         android:textSize="25sp"
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <com.google.android.material.textfield.TextInputLayout
-        app:layout_constraintTop_toBottomOf="@+id/txtdangnhap"
+        app:layout_constraintTop_toBottomOf="@+id/textdangnhap"
         android:layout_marginTop="5dp"
         android:id="@+id/line1"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -53,7 +53,7 @@
     </com.google.android.material.textfield.TextInputLayout>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btndangnhap"
-        android:background="@color/colorbutton"
+        android:background="@drawable/background_button"
         app:layout_constraintTop_toBottomOf="@id/line2"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
@@ -79,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/txtdangky"
             android:text="Đăng ký"
             android:textColor="@android:color/holo_red_light"
             android:textSize="15sp"
