--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -39,6 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:id="@+id/txttongtien"
                     android:text="25.000"
                     android:layout_gravity="center"
                     android:textSize="15sp"
@@ -64,6 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:id="@+id/txtsodienthoai"
                     android:text="0128764245"
                     android:layout_gravity="center"
                     android:textSize="15sp"
@@ -89,6 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:id="@+id/txtemail"
                     android:text="yourmail@gmail.com"
                     android:layout_gravity="center"
                     android:textSize="15sp"
@@ -109,6 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtdiachi"
             android:drawableLeft="@drawable/ic_location"
             android:drawablePadding="5dp"
             android:textColorHint="@android:color/holo_red_light"
@@ -117,6 +121,7 @@
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btndathang"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
