--- a/app/src/main/res/layout/item_giohang.xml
+++ b/app/src/main/res/layout/item_giohang.xml
@@ -15,8 +15,8 @@
             android:scaleType="centerCrop"
             android:layout_margin="3dp"
             android:src="@drawable/icon_new"
-            android:layout_width="100dp"
-            android:layout_height="130dp"/>
+            android:layout_width="120dp"
+            android:layout_height="match_parent"/>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -87,6 +87,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
+                <CheckBox
+                    android:id="@+id/item_giohang_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
